1999-10-19  Matt Ettus   <matt@ettus.com>

	* scheme/gnet-vipec.scm: Fixed ground node handling, some code cleaning.

	* scheme/gnet-bom.scm:  Removed references to strip1.  Thanks Stefan.

	* scheme/gnetlist.scm: Removed strip1, added ground handling for
	number-nets function.

1999-10-17  Ales Hvezda  <ahvezda@geda.seul.org>
	
	* src/*.c: Changed all files to use the new libgeda/libgeda.h include

1999-10-11  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/*.scm: Removed all gnetlist:set-netlist-mode

	* src/g_register.c: Removed register call to gnetlist:set-netlist-mode

	* src/g_netlist.c: Removed gnetlist:set-netlist-mode

	* scheme/gnet-spice.scm: Integrated latest spice backend by Bas 
          Gieltjes

	* tests/: Created directory to hold gnetlist tests
	
	* tests/*: Populated tests directory with output from correct netlist
	  runs

1999-10-10  Ales Hvezda  <ahvezda@geda.seul.org>

	* gnetlist/gnetlist.c: Fixed up s_log_init to use the new prototype

1999-10-09  Ales Hvezda  <ahvezda@geda.seul.org>

	* examples/test.sch: Renamed (replaced) test_verilog.sch

	* examples/test_verilog.sch: Translated it away from borders

	* examples/7447.sch: Translated it away from borders

1999-10-06  Ales Hvezda  <ahvezda@geda.seul.org>

	* scheme/gnetlist.scm: Fixed a dangling reference to bom:strip1 
	  (changed to strip1)

1999-10-06  Matthew Ettus   <matt@ettus.com>

	* scheme/gnet-vipec.scm:  New file, not functional yet.

	* scheme/gnet-PCB.scm:  Cleaned up functions, moved common ones to
	main gnetlist.scm file. 

	* scheme/gnet-allegro.scm:  Clean up, remove dead code

	* scheme/gnet-bom.scm:  Clean up, remove dead code

1999-10-04  Magnus Danielson  <cfmd@swipnet.se>

	* scheme/gnet-vhdl.scm: Finally fixed the write-port-clause stuff.
	This is now splitted into three routines which forms a much better
	basis for further development and also fixes the bugs which occurs if
	any or more of the in, out and inout sublists happends to be empty.